--- a/Peer2Peer/Torrent.xaml
+++ b/Peer2Peer/Torrent.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Peer2Peer"
         mc:Ignorable="d"
-        Title="Torrent" Height="400" Width="500">
+        Title="Torrent" Height="450" Width="650"
+        Closing="Window_Closing">
     <Grid>
 
         <Grid.Background>
@@ -21,14 +22,14 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width = "400" />
+            <ColumnDefinition Width = "420" />
             <ColumnDefinition Width = "*" />
         </Grid.ColumnDefinitions>
 
         <Label Content = "Torrent" FontSize = "15"
          FontWeight = "Bold" Grid.Column = "0" Grid.Row = "0"/>
 
-        <Button Width="70" VerticalAlignment = "Center" Content="SignOut" Grid.Column = "1" Grid.Row = "0" Click="Button_Click" />
+        <Button Width="70" VerticalAlignment = "Center" HorizontalAlignment = "Right" Content="SignOut" Margin="0,0,10,0" Grid.Column = "1" Grid.Row = "0" Click="Button_Click" />
 
         <StackPanel Grid.Column = "0" Grid.Row = "1" Orientation = "Horizontal">
             <Label Content = "Request File" FontWeight="Bold"  VerticalAlignment = "Center" Width = "80"/>
@@ -53,10 +54,17 @@
 
         <StackPanel Grid.Column = "0" Grid.Row = "3" Orientation = "Horizontal">
             <ProgressBar Width="300" Height="20" Name="progressBar" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding ElementName=progressBar, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,17,0,16.6" Width="29" />
+            <TextBlock Text="{Binding ElementName=progressBar, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" FontWeight="Bold" VerticalAlignment="Center" Margin="0,17,0,16.6" Width="29" />
             <Button Width="70" Margin="10,0,0,0"  VerticalAlignment = "Center" Content="Download" Click="Button_Click_2"/>
 
         </StackPanel>
 
+        <StackPanel Grid.Column = "1" Grid.Row = "3" Orientation = "Horizontal">
+            <Label Name="labelDownload" Content="" FontWeight="Bold" VerticalAlignment="Center" RenderTransformOrigin="1.476,0.417" Margin="0,10,0,0.2" Width="177" Height="89"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column = "1" Grid.Row = "2" Orientation = "Horizontal">
+            <Label x:Name="labelUpload" Content="" FontWeight="Bold" VerticalAlignment="Bottom" Width="177" Height="50"/>
+        </StackPanel>
     </Grid>
 </Window>
